# gandula-expected-goals

./: .gitignore  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
gandula/conf/: logging.yml
gandula/notebooks/: dumps.ipynb
gandula/src/gandula/: __init__.py  settings.py
notebooks/: dumps.ipynb  kloppy.ipynb
src/gandula-expected-goals/: __main__.py  settings.py
src/gandula-expected-goals/pipelines/: expected_goals.py
src/gandula-expected-goals/pipelines/expected_goals/: nodes.py  pipeline.py
src/gandula_expected_goals/: __main__.py  decorators.py  settings.py  utils.py
src/gandula_expected_goals/pipelines/expected_goals/: nodes.py  pipeline.py
src/gandula_expected_goals/schemas/: base.py
src/gandula_expected_goals/schemas/event/: event.py  event_pass.py
