[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gandula_expected_goals"
version = "0.0.1"
description = "Expected goals models using kloppy."
authors = [
  {name="Lucas Rocha Laredo", email="devlucaslaredo@gmail.com"},
]
maintainers = [
  {name="Lucas Rocha Laredo", email="devlucaslaredo@gmail.com"},
]
readme = 'README.md'
repository = "https://github.com/laredoo/gandula-expected-goals"
keywords = ["salab", "expected", "goals", "sports", "analytics"]
requires-python = ">=3.11"

dependencies = [
    "kedro>=0.19.12",
    "kedro-datasets[pandas]>=7.0.0",
    "kedro-viz>=11.0.2",
    "kloppy>=3.16.0",
    "optuna>=4.4.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "ruff>=0.6.2",
]
test = [
    "pytest>=8.0.0"
]

[tool.kedro]
package_name = "gandula_expected_goals"
project_name = "gandula_expected_goals"
kedro_init_version = "0.19.9"
source_dir = "."

[tool.kedro_telemetry]
project_id = "ee2492e9d58c48728149aa9ab7742149"

[tool.hatch.build.targets.wheel]
packages = ["src/gandula_expected_goals"]

[tool.uv.sources]
kloppy = { path = "../kloppy", editable = true }
